--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-theme: jekyll-theme-cayman
+theme               : jekyll-theme-cayman
+encoding            : UTF-8
+layouts_dir         : _layouts
+data_dir            : _data
+includes_dir        : _includes
