--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 theme               : jekyll-theme-cayman
-encoding            : UTF-8
 layouts_dir         : _layouts
 data_dir            : _data
 includes_dir        : _includes
+
+encoding            : "utf-8"
+markdown_ext        : "markdown,mkdown,mkdn,mkd,md"
