--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,6 +1,6 @@
-- title: Nr 1
-  author: herr sowieso
+- title: "Nr 1"
+  author: "herr sowieso"
 
-- title: Nr 2
-  author: frau sowieso
+- title: "Nr 2"
+  author: "frau sowieso"
 
