--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ includes_dir        : _includes
 
 encoding            : "utf-8"
 markdown_ext        : "markdown,mkdown,mkdn,mkd,md"
+theme: jekyll-theme-leap-day
