--- a/_data/books.yml
+++ b/_data/books.yml
@@ -13,3 +13,9 @@
   datum: "15.05.2000"
   bewertung: 5
 
+-
+  id: 3
+  title: "Nr 3"
+  author: "frau sowieso"
+  datum: "15.02.2000"
+  bewertung: 3
