--- a/_data/books.yml
+++ b/_data/books.yml
@@ -4,7 +4,7 @@
   author: "herr sowieso"
   shorttext: "Beschreibung in ganz ganz wenigen Worten"
   datum: "15.05.2000"
-  bewertung: 5
+  bewertung: "5"
 
 -
   id: 2
@@ -12,7 +12,7 @@
   author: "frau sowieso"
   shorttext: "Beschreibung in ganz ganz wenigen Worten"
   datum: "15.05.2000"
-  bewertung: 5
+  bewertung: "5"
 
 -
   id: 3
@@ -20,4 +20,4 @@
   author: "frau sowieso"
   shorttext: "Beschreibung in ganz ganz wenigen Worten"
   datum: "15.02.2000"
-  bewertung: 3
+  bewertung: "3"
