--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+title: Leonie's Bücher Rezensionen
+
+
 layouts_dir         : _layouts
 data_dir            : _data
 includes_dir        : _includes
