doing the theme

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,6 @@ title               : Leonie's Bücher Rezensionen
 layouts_dir         : _layouts
 data_dir            : _data
 includes_dir        : _includes
-theme               : jekyll-theme-cayman
-
+theme               : minima
 encoding            : "utf-8"
 markdown_ext        : "markdown,mkdown,mkdn,mkd,md"
