--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-title               : Leonie's Bücher Rezensionen
+name: Leonie's Bücher Rezensionen
+title: null
+
 
 
 layouts_dir         : _layouts
